--- a/algopay/package.json
+++ b/algopay/package.json
@@ -6,13 +6,16 @@
     "algosdk": "^1.3.1",
     "all": "^0.0.0",
     "bootstrap": "^4.3.1",
+    "cheerio": "^1.0.0-rc.10",
     "clipboard-copy": "^3.1.0",
+    "firebase": "^9.1.2",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.1.2",
+    "request-promise": "^4.2.6"
   },
   "scripts": {
     "start": "react-scripts start",
