--- a/algopay/package.json
+++ b/algopay/package.json
@@ -8,13 +8,15 @@
     "bootstrap": "^4.3.1",
     "cheerio": "^1.0.0-rc.10",
     "clipboard-copy": "^3.1.0",
-    "firebase": "^9.1.2",
+    "firebase": "^8.10.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-router": "^5.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.2",
+    "react-table-scrollbar": "^0.1.11",
     "request-promise": "^4.2.6"
   },
   "scripts": {
