--- a/algopay/package.json
+++ b/algopay/package.json
@@ -13,8 +13,9 @@
     "popper.js": "^1.15.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-firebase-hooks": "^3.0.4",
     "react-router": "^5.2.1",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "3.1.2",
     "react-table-scrollbar": "^0.1.11",
     "request-promise": "^4.2.6"
